# rust_pixel

./: .gitignore  5.pix  CLAUDE.md  Cargo.toml  README.md  README_UI_FRAMEWORK.md  build.rs  build_aliases.rs  build_support.rs  coding.md  debug.txt  gen.md  index.html  index.js  pixel.toml  todo.md  tyclaw.md
apps/basic_snake/: Cargo.toml  build.rs
apps/basic_snake/assets/: debug_array.bas  game.bas  game_simple.bas  test.bas  test_array.bas  test_simple.bas
apps/basic_snake/src/: lib.rs  main.rs  model.rs  render_graphics.rs  render_terminal.rs
apps/block_arrow/: Cargo.toml  readme.md
apps/block_arrow/assets/: cc7.txt
apps/block_arrow/ffi/: Cargo.toml  Makefile
apps/block_arrow/lib/: Cargo.toml
apps/block_arrow/src/: lib.rs  main.rs  model.rs  render_graphics.rs  render_terminal.rs
apps/block_arrow/wasm/: Cargo.toml  index.js
apps/char_test/: Cargo.toml
apps/char_test/src/: lib.rs  main.rs  model.rs  render_graphics.rs  render_terminal.rs
apps/colorblk/: Cargo.toml
apps/colorblk/assets/: cc11.txt  cc14.txt  cc3.txt
apps/colorblk/ffi/: Cargo.toml  Makefile
apps/colorblk/lib/: Cargo.toml
apps/colorblk/src/: level.rs  lib.rs  main.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs
apps/colorblk/wasm/: Cargo.toml  index.js
apps/ginrummy/: Cargo.toml
apps/ginrummy/lib/: Cargo.toml
apps/ginrummy/src/: lib.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs
apps/llm_arena/: Cargo.toml
apps/llm_arena/assets/: baoshi.pix  fire.pix  food.pix  yaoshui.pix
apps/llm_arena/src/: lib.rs  main.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs
apps/mdpt/: Cargo.toml  build.rs
apps/mdpt/assets/: dance.ssf  demo.md  demo_charts.md  gen.md  rust.md  rust2.md
apps/mdpt/src/: chart.rs  highlight.rs  lib.rs  main.rs  model.rs  parser.rs  render.rs  render_graphics.rs  render_terminal.rs  slide.rs  slide_builder.rs
apps/palette/: Cargo.toml
apps/palette/assets/: back.txt  test.txt
apps/palette/ffi/: Cargo.toml
apps/palette/lib/: Cargo.toml
apps/palette/src/: lib.rs  main.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs  select.rs
apps/palette/wasm/: Cargo.toml  index.html
apps/petview/: Cargo.toml
apps/petview/assets/: 100.pix  1000.pix  1001.pix  1002.pix  1003.pix  1004.pix  1005.pix  1006.pix  1007.pix  1008.pix  1009.pix  101.pix  1010.pix  1011.pix  1012.pix  1013.pix  1014.pix  1015.pix  1016.pix  1017.pix  1018.pix  1019.pix  102.pix  1020.pix  1021.pix  1022.pix  1023.pix  1024.pix  1025.pix  1026.pix  1027.pix  1028.pix  1029.pix  103.pix  1030.pix  1031.pix  1032.pix  1033.pix  1034.pix  1035.pix  (+2014 more)
apps/petview/lib/: Cargo.toml
apps/petview/src/: lib.rs  main.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs
apps/petview/wasm/: Cargo.toml  index.js
apps/poker/: Cargo.toml
apps/poker/ffi/: Makefile
apps/poker/lib/: Cargo.toml
apps/poker/src/: lib.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs
apps/poker/texas/: Cargo.toml
apps/poker/wasm/: Cargo.toml
apps/snake/: Cargo.toml
apps/snake/src/: lib.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs
apps/stockai/: Cargo.toml
apps/stockai/src/: indicators.rs  lib.rs  main.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs
apps/tower/: Cargo.toml
apps/tower/lib/: Cargo.toml
apps/tower/src/: lib.rs  main.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs
apps/ui_demo/: Cargo.toml
apps/ui_demo/src/: lib.rs  main.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs
games/red_black/: Cargo.toml
games/red_black/src/: lib.rs  main.rs  model.rs  render.rs
games/template/: Cargo.toml
games/template/assets/: 1.pix  back.txt
games/template/ffi/: Makefile  cbindgen.toml  cbindgen_py.toml
games/template/lib/: Cargo.toml
games/template/src/: lib.rs  main.rs  model.rs  render.rs
games/template/stand-alone/: Cargo.toml  Cargo.toml.temp  FfiCargo.toml.temp  LibCargo.toml  LibCargo.toml.temp  WasmCargo.toml.temp  pixel.toml  pixel.toml.temp
pixel_basic/: COROUTINE_INTEGRATION.md  Cargo.toml  PROGRESS.md
pixel_basic/src/: game_bridge.rs  game_context.rs  lib.rs  pixel_game_context.rs
pixel_basic/src/basic/: ast.rs  error.rs  executor.rs  main.rs  mod.rs  parser.rs  runtime.rs  token.rs  tokenizer.rs  variables.rs
pixel_basic/tests/: test_for_plot.rs  test_key_and.rs  test_plot_visual.rs  test_reused_loop_var.rs  test_snake_arrays.rs  test_snake_lifecycle.rs
rust-pixel/: Cargo.toml
rust-pixel/cargo-pixel/src/: main.rs
rust-pixel/pixel_edit/src/: render.rs
rust-pixel/pixel_petii/src/: main.rs
rust-pixel/src/: algorithm.rs  asset.rs  audio.rs  context.rs  event.rs  game.rs  lib.rs  log.rs  particle.rs  render.rs  util.rs
rust-pixel/src/algorithm/: astar.rs  bezier.rs  union_find.rs
rust-pixel/src/event/: input.rs
rust-pixel/src/render/: adapter.rs  buffer.rs  cell.rs  image.rs  panel.rs  sprite.rs  style.rs
rust-pixel/src/util/: objpool.rs  particle.rs  rand.rs  shape.rs
rust-pixel/tedit/src/: main.rs
rust-pixel/web-templates/: index.html  index.js  pix.js  pixel.js
tools/asset/: Cargo.toml  README.md
tools/asset/src/: main.rs
tools/cargo-pixel/: Cargo.toml
tools/cargo-pixel/src/: build_run.rs  command.rs  convert_gif.rs  creat.rs  main.rs  prepare_env.rs  symbols.rs
tools/edit/: Cargo.toml
tools/edit/assets/: logo.pix
tools/edit/src/: lib.rs  main.rs  model.rs  render.rs  render_graphics.rs  render_terminal.rs
tools/petii/: Cargo.toml  README.md
tools/petii/src/: ai_cli.rs  benchmark.rs  benchmark_cli.rs  c64.rs  contour.rs  converter.rs  corpus.rs  edge_debug.rs  glyph_topology.rs  lib.rs  main.rs  optimizer.rs  preview.rs  types.rs
tools/pixel_edit/: Cargo.toml
tools/pixel_edit/src/: main.rs  model.rs  (+1 more)
tools/ssf/: Cargo.toml  README.md
tools/symbol/: Cargo.toml
tools/symbols/: 3500C.txt  Cargo.toml  SUBTLEX-CH-CHR.csv  cpsym.sh  generate_cjk.py  generate_symbols.py  symbol_map.json  symbol_map_8192.json  tui.txt
tools/tedit/: Cargo.toml
tools/ttf/: Cargo.toml
(+894 files in other folders)
