[package]
name = "rust_pixel"
version = "0.6.1"
edition = "2021"
authors = ["zipxing@hotmail.com"]
repository = "https://github.com/zipxing/rust_pixel"
readme = "README.md"
license = "Apache-2.0"
description = "2d pixel art game engine & rapid prototype tools support terminal, sdl2, and web..."
categories = ["game-engines", "gui", "graphics"]
exclude = ["/screen-shot", "/doc", "/test", "/assets", "/web-template"]

# Define binaries that will be built for the project.
[[bin]]
name = "cargo-pixel"
path = "tools/cargo-pixel/src/main.rs"

[dependencies]
pixel_macro = { path = "tools/pixel_macro" }
# pixel_macro = "0.2.0"
bincode = "1.3.3"
bitflags = { version = "2.9", features = ["serde"] }
crossterm = { version = "0.22", optional = true }
dirs-next = "2.0.0"
flate2 = "1.1.2"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = { version = "1.3.0", optional = true }
num-traits = "0.2"
num-derive = "0.4"
regex = "1.11.1"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
keyframe = "=1.1.1"
keyframe_derive = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
sdl2 = { version = "0.36.0", optional = true, features = ["image", "gfx", "unsafe_textures"] }
image = { version = "0.24.9", optional = true }
glow = { version = "0.14.2" }
unicode-segmentation = "1.12"
unicode-width = "0.1"
clap = { version = "3.2", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.5"
lab = "0.11.0"
deltae = "0.3.2"

# wgpu dependencies
winit = { version = "0.30", optional = true }
wgpu = { version = "25.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.19", features = ["derive"], optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios", target_arch = "wasm32")))'.dependencies]
rodio = { version = "0.18.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "Window",
  "WebGlBuffer",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "console",
  "Event",
  "MouseEventInit"
]

[features]
default = ["log4rs", "crossterm", "rodio", "image"]
web = ["image"]
term = ["log4rs", "crossterm", "rodio", "image"]
sdl = ["log4rs", "rodio", "sdl2", "image"]
wgpu = ["log4rs", "rodio", "dep:winit", "dep:wgpu", "dep:pollster", "dep:bytemuck", "image"]
base = ["log4rs"]

[profile.release]
opt-level = 's'

[workspace]
members = [
    "apps/*",
    "tools/*",
]

exclude = [
    "tools/cargo-pixel",
    "apps/poker/ffi",
    "apps/poker/wasm",
    "apps/template/ffi",
    "apps/template/wasm",
    "apps/palette/ffi",
    "apps/palette/wasm",
    "apps/petview/ffi",
    "apps/petview/wasm",
]

[workspace.package]
authors = ["zipxing@hotmail.com"]
description = "2d pixel art game engine & rapid prototype tools support terminal, sdl2, and web..."

