[package]
name = "colorblk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
itertools = "0.14.0"
log = "0.4.29"
rayon = "1.11.0"
bincode = "2.0.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasm-bindgen = "0.2.108"
keyframe = "=1.1.1"
wasm-bindgen-futures = "0.4.58"
web-sys = "0.3.85"
colorblk_lib = { path = "./lib" }
rust_pixel = { path = "../..", default-features = false }
# pixel_macro = { path = "../../pixel_macro" }

[features]
term = ["rust_pixel/term"]
wgpu = ["rust_pixel/wgpu"]
