[package]
name = "ginrummy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfg_aliases = { workspace = true }

[dependencies]
crossterm = { version = "0.29" }
itertools = "0.14.0"
log = "0.4.29"
log4rs = "1.4.0"
bincode = "2.0.1"
rand = "0.9.2"
serde_json = "1.0.149"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = "0.3.85"
rust_pixel = { path = "../..", default-features = false }
poker_lib = { path = "../poker/lib" }
ginrummy_lib = { path = "./lib" }
# pixel_macro = { path = "../../pixel_macro" }

[features]
term = ["rust_pixel/term"]
wgpu = ["rust_pixel/wgpu"]
