[package]
name = "llm_arena"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cfg_aliases = { workspace = true }

[dependencies]
log = "0.4.29"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.114"
rust_pixel = { path = "../..", default-features = false }

[features]
term = ["rust_pixel/term"]
wgpu = ["rust_pixel/wgpu"]
