[package]
name = "mdpt"
version = "0.1.0"
edition = "2021"
default-run = "mdpt"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cfg_aliases = { workspace = true }

[dependencies]
rust_pixel = { path = "../..", default-features = false }
comrak = { version = "0.36", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
base64 = "0.22"
unicode-width = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.64"
web-sys = "0.3.91"

[features]
term = ["rust_pixel/term"]
wgpu = ["rust_pixel/wgpu"]
web = ["rust_pixel/web"]
