[package]
name = "palette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
itertools = "0.14.0"
log = "0.4.27"
bincode = "2.0.1"
num-traits = "0.2"
num-derive = "0.4"
rand = "0.9.2"
serde_json = "1.0.141"
wasm-bindgen = "0.2.100"
keyframe = "=1.1.1"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
palette_lib = { path = "./lib" }
rust_pixel = { path = "../..", default-features = false }

[features]
sdl = ["rust_pixel/sdl"]
winit = ["rust_pixel/winit"]
wgpu = ["rust_pixel/wgpu"]
term = ["rust_pixel/term"]
