[package]
name = "petview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
itertools = "0.10.3"
log = "0.4.16"
bincode = "1.3.1"
rand = "0.8.5"
serde_json = "1.0.81"
wasm-bindgen = "0.2.92"
num-traits = "0.2"
num-derive = "0.4"
keyframe = "=1.1.1"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.4"
petview_lib = { path = "./lib" }
rust_pixel = { path = "../..", default-features = false }

[features]
sdl = ["rust_pixel/sdl"]
term = ["rust_pixel/term"]
