[package]
name = "petview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cfg_aliases = { workspace = true }

[dependencies]
itertools = "0.14.0"
log = "0.4.28"
bincode = "2.0.1"
rand = "0.9.2"
serde_json = "1.0.145"
wasm-bindgen = "0.2.103"
num-traits = "0.2"
num-derive = "0.4"
keyframe = "=1.1.1"
wasm-bindgen-futures = "0.4.53"
web-sys = "0.3.80"
petview_lib = { path = "./lib" }
rust_pixel = { path = "../..", default-features = false }

[features]
sdl = ["rust_pixel/sdl"]
term = ["rust_pixel/term"]
wgpu = [ "rust_pixel/wgpu" ]
glow = ["rust_pixel/glow"]
