[package]
name = "poker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
crossterm = { version = "0.22" }
itertools = "0.10.5"
log = "0.4.27"
# pretty_env_logger = "0.4.0"
log4rs = "1.3.0"
bincode = "1.3.3"
rand = "0.8.5"
serde_json = "1.0.141"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
rust_pixel = { path = "../..", default-features = false }
poker_lib = { path = "./lib" }
texas_lib = { path = "./texas" }
# pixel_macro = { path = "../../pixel_macro" }

[features]
sdl = ["rust_pixel/sdl"]
term = ["rust_pixel/term"]
winit = ["rust_pixel/winit"]
wgpu = ["rust_pixel/wgpu"]

