[package]
name = "snake"
version = "0.1.0"
edition = "2021"
description = "snake game"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
itertools = "0.13.0"
log = "0.4.27"
bincode = "1.3.3"
rand = "0.8.5"
serde_json = "1.0.141"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
wasm-logger = "0.2.0"
rust_pixel = { path = "../..", default-features = false }
# pixel_macro = { path = "../../pixel_macro" }

[features]
sdl = ["rust_pixel/sdl"]
term = ["rust_pixel/term"]
winit = ["rust_pixel/winit"]
wgpu = ["rust_pixel/wgpu"]

