[package]
name = "stockai"
version = "0.1.0"
edition = "2021"
description = "Stock AI Analyzer - 股票技术分析与买点推荐"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cfg_aliases = { workspace = true }

[dependencies]
itertools = "0.14.0"
log = "0.4.29"
bincode = "2.0.1"
rand = "0.9.2"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = "0.3.91"
wasm-logger = "0.2.0"
chrono = "0.4"
ureq = "2.12"
encoding_rs = "0.8"
rust_pixel = { path = "../..", default-features = false }

[features]
term = ["rust_pixel/term"]
wgpu = ["rust_pixel/wgpu"]
