[package]
name = "tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# crossterm = { version = "0.22" }
itertools = "0.14.0"
log = "0.4.27"
# sdl2 = { version = "0.36.0", optional = true, features = ["image", "gfx"]}

bincode = "2.0.1"
rand = "0.9.2"
serde_json = "1.0.141"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
wasm-logger = "0.2.0"
rust_pixel = { path = "../..", default-features = false }
tower_lib = { path = "./lib" }
# pixel_macro = { path = "../../pixel_macro" }

[features]
sdl = ["rust_pixel/sdl"]
winit = ["rust_pixel/winit"]
wgpu = ["rust_pixel/wgpu", "rust_pixel/winit"]
term = ["rust_pixel/term"]
