[package]
name = "tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cfg_aliases = { workspace = true }

[dependencies]
# crossterm = { version = "0.22" }
itertools = "0.14.0"
log = "0.4.28"
bincode = "2.0.1"
rand = "0.9.2"
serde_json = "1.0.145"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = "0.3.80"
wasm-logger = "0.2.0"
rust_pixel = { path = "../..", default-features = false }
tower_lib = { path = "./lib" }
# pixel_macro = { path = "../../pixel_macro" }

[features]
term = ["rust_pixel/term"]
wgpu = ["rust_pixel/wgpu"]
