[package]
name = "ui_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_pixel = { path = "../..", features = ["term"] }
log = "0.4"

[features]
default = ["term"]
term = ["rust_pixel/term"]
sdl = ["rust_pixel/sdl"]
winit = ["rust_pixel/winit"]
wgpu = ["rust_pixel/wgpu"]
web = ["rust_pixel/web"]