[package]
name = "red_black"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22" }
itertools = "0.10.3"
log = "0.4.16"
# pretty_env_logger = "0.4.0"
log4rs = "1.1.1"
bincode = "1.3.1"
rand = "0.8.5"
serde_json = "1.0.81"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.4"
rust_pixel = { path = "../../rust-pixel" }
poker_lib = { path = "../poker/lib" }
texas_lib = { path = "../texas/lib" }
sdl2 = { version = "0.36.0", optional = true, features = ["image", "gfx", "unsafe_textures"]}

[features]
sdl = ["dep:sdl2"]
