[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22" }
itertools = "0.10.3"
log = "0.4.16"
bincode = "1.3.1"
rand = "0.8.5"
serde_json = "1.0.81"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.4"
rust_pixel = { path = "../../rust-pixel" }
template_lib = { path = "./lib" }

[features]
sdl = []
