[package]
name = "asset"
version = "0.1.0"
edition = "2021"
description = "RustPixel Asset Packer - A tool for packing images into texture atlases with .pix metadata generation"
authors = ["zipxing@hotmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zipxing/rust_pixel"
keywords = ["gamedev", "texture-atlas", "image-packing", "rustpixel"]
categories = ["command-line-utilities", "game-development", "graphics"]

[[bin]]
name = "asset"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
log4rs = "1.3.0"
image = "0.24.9"
lab = "0.11.0"
deltae = "0.3.2"
rust_pixel = { path = "../.." }

[features]
default = []
sdl = ["rust_pixel/sdl"]
term = ["rust_pixel/term"]
