[package]
name = "cargo-pixel"
version = "0.4.0"
authors = ["<zipxing@hotmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.5"
flate2 = "1.0"

