[package]
name = "edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfg_aliases = { workspace = true }

[dependencies]
itertools = "0.14.0"
log = "0.4.27"
sdl2 = { version = "0.38.0", optional = true, features = ["image", "gfx"]}
unicode-segmentation = "1.12"
unicode-width = "0.2"
log4rs = "1.3.0"
bincode = "2.0.1"
rand = "0.9.2"
serde_json = "1.0.141"
rust_pixel = { path = "../..", default-features = false }

[features]
default = ["term"]
sdl = ["rust_pixel/sdl"]
winit = ["rust_pixel/winit"]
wgpu = ["rust_pixel/wgpu"]
term = ["rust_pixel/term"]
