[package]
name = "edit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cfg_aliases = { workspace = true }

[dependencies]
itertools = "0.14.0"
log = "0.4.28"
unicode-segmentation = "1.12"
unicode-width = "0.2"
bincode = "2.0.1"
rand = "0.9.2"
serde_json = "1.0.145"
wasm-bindgen = "0.2.103"
num-traits = "0.2"
num-derive = "0.4"
rust_pixel = { path = "../..", default-features = false }

[features]
default = ["term"]
sdl = ["rust_pixel/sdl"]
glow = ["rust_pixel/glow"]
wgpu = ["rust_pixel/wgpu"]
term = ["rust_pixel/term"]
