[package]
name = "petii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
log4rs = "1.3.0"
image = "0.25.6"
lab = "0.11.0"
deltae = "0.3.2"
rust_pixel = { path = "../.." }

[features]
sdl = ["rust_pixel/sdl"]
term = ["rust_pixel/term"]
winit = ["rust_pixel/winit"]
wgpu = ["rust_pixel/wgpu"]