[package]
name = "petii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.29"
log4rs = "1.4.0"
image = "0.25.9"
lab = "0.11.0"
deltae = "0.3.2"
rust_pixel = { path = "../.." }

[features]
term = ["rust_pixel/term"]
wgpu = ["rust_pixel/wgpu"]
