[package]
name = "pixel_edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22" }
itertools = "0.10.5"
log = "0.4.27"
sdl2 = { version = "0.36.0", optional = true, features = ["image", "gfx"]}
unicode-segmentation = "1.12"
unicode-width = "0.1"
log4rs = "1.3.0"
bincode = "1.3.3"
rand = "0.8.5"
serde_json = "1.0.140"
rust_pixel = { path = "../.." }

[features]
sdl = ["rust_pixel/sdl"]
term = ["rust_pixel/term"]
