[package]
name = "ssf"
version = "0.1.0"
edition = "2021"
description = "SSF sequence frame player tool for RustPixel"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
itertools = "0.14.0"
log = "0.4.27"
bincode = "2.0.1"
rand = "0.9.2"
serde_json = "1.0.141"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
wasm-logger = "0.2.0"
rust_pixel = { path = "../..", default-features = false }

[features]
default = ["term"]
sdl = ["rust_pixel/sdl"]
winit = ["rust_pixel/winit"]
wgpu = ["rust_pixel/wgpu"]
term = ["rust_pixel/term"] 
