[package]
name = "ssf"
version = "0.1.0"
edition = "2021"
description = "SSF sequence frame player tool for RustPixel"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cfg_aliases = { workspace = true }

[dependencies]
itertools = "0.14.0"
log = "0.4.28"
bincode = "2.0.1"
rand = "0.9.2"
serde_json = "1.0.145"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = "0.3.80"
wasm-logger = "0.2.0"
rust_pixel = { path = "../..", default-features = false }

[features]
sdl = ["rust_pixel/sdl"]
winit = ["rust_pixel/winit"]
wgpu = ["rust_pixel/wgpu"]
term = ["rust_pixel/term"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(graphics_mode)',
    'cfg(wasm)',
] } 
