[package]
name = "ssf"
version = "0.1.0"
edition = "2021"
description = "SSF sequence frame player tool for RustPixel"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
cfg_aliases = { workspace = true }

[dependencies]
itertools = "0.14.0"
log = "0.4.29"
bincode = "2.0.1"
rand = "0.9.2"
serde_json = "1.0.149"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = "0.3.91"
wasm-logger = "0.2.0"
rust_pixel = { path = "../..", default-features = false }

[features]
term = ["rust_pixel/term"]
wgpu = ["rust_pixel/wgpu"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(graphics_mode)',
    'cfg(wasm)',
] } 
